@@ -6,7 +6,7 @@
 
 set(YARP_VERSION_MAJOR "2")
 set(YARP_VERSION_MINOR "3")
-set(YARP_VERSION_PATCH "10")
+set(YARP_VERSION_PATCH "11")
 set(YARP_VERSION_MODIFIER "svn1")
 set(YARP_VERSION_ABI "1")
 
