@@ -1,3 +1,13 @@
+2011-08-25  Marco Randazzo    <marco.randazzo@iit.it>
+	
+	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
+	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
+	* src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
+	* src/libYARP_dev/src/RemoteControlBoard.cpp
+	* conf/YarpVersion.cmake
+	Added method: getCurrentImpedanceLimit() to ImpedanceControl interface
+	YARP_VERSION_PATCH now is 11
+
 2011-08-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_OS/src/Port.cpp: add support for YARP_PORT_PREFIX.
